[fix] plot-types layout `fill-between` was a bit too long leading to a janky layout

--- a/src/components/PlotTypes/plot-types.module.css
+++ b/src/components/PlotTypes/plot-types.module.css
@@ -11,6 +11,7 @@
 .plotTypeImage {
   height: 100px;
   width: 100px;
+  margin: 0 1em;
   box-shadow: 0pt 0pt 5pt 0pt rgba(0, 0, 0, 0.313);
   box-shadow: 0pt 0pt 5pt 0pt var(--ifm-color-shadow);
 }
@@ -23,7 +24,7 @@
 
 
 .plotTypeLink {
-  padding: 1em;
+  padding: 1em 0;
   color: var(--ifm-color-content-secondary);
 }
 
